<resources>
    <string name="app_name">Ornamental Flowers</string>
    <string name="login">Login</string>
    <string name="EmailAddress">Email Address</string>
    <string name="textPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btn_sign_in_short">Register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="FirstLastName">First And Last name</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="id_number">Id Number</string>
    <string name="store_site">Store Site</string>
    <string name="open_camera">Open Camera</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_invoice_number">Enter Invoice Number</string>
    <string name="enter_sum_invoice">Enter Sum Invoice</string>
    <string name="DateInvoice">Date Invoice</string>
    <string name="Hello">Hello</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="invoice_number">invoicenumber</string>
    <string name="sum_invoice">sum_invoice</string>
    <string name="ShowDateInvoice">Date Invoice</string>

    <string name="weather_notif">Weather Notifications</string>
    <string name="curr_pos">Your Current Position</string>
    <string name="pick_time">Select preferred notification time</string>
    <string name="latitude">Latitude-</string>
    <string name="longitude">Longitude-</string>
    <string name="address">Your Address:</string>
    <string name="Notifications">Notifications</string>
    <string name="Weatherupdates">Weather updates</string>
    <string name="Summary">Summary :</string>
    <string name="notif_info">*The weather alerts will be activated in the background and will get your current location, pressing the button will confirm the use</string>
    <string name="confirm">Confirm</string>
    <string name="Cancel">Cancel Notifications</string>

    <string name="windSpeed">Wind Speed :</string>
    <string name="Temp">Temperature:</string>


    <string name="ErrorTitle">Warning!</string>
    <string name="ErrorMSG">You must give location permission if you want to know the weather</string>
    <string name="Settings">Settings</string>

    <string name="locationService_Title">Weather updates service</string>
    <string name="locationService_MSG">Waiting for your location</string>
    <string name="secces_save">Successfully saved invoice</string>
</resources>
