<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtNumInvoice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/enter_invoice_number"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputNumInvoice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtSumInvoice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/enter_sum_invoice"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputSumInvoice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtDateInvoice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/DateInvoice"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputDateInvoice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="datetime" />

    <ImageView
        android:id="@+id/mImageView"
        android:layout_width="204dp"
        android:layout_height="225dp" />

    <Button
        android:id="@+id/BtnImage"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/image" />

    <Button
        android:id="@+id/SaveInvoice"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        />

</LinearLayout>