<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/invoiceImage"
        android:layout_width="107dp"
        android:layout_height="105dp"
        android:layout_marginTop="36dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="306dp"
        android:layout_height="105dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:layout_gravity="">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNumInvoice"
                android:layout_width="135dp"
                android:layout_height="36dp"
                android:text="@string/invoice_number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/inputNumInvoice"
                android:layout_width="155dp"
                android:layout_height="35dp"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSumInvoice"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:text="@string/sum_invoice"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/inputSumInvoice"
                android:layout_width="155dp"
                android:layout_height="35dp"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDateInvoice"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:text="@string/ShowDateInvoice"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/inputDateInvoice"
                android:layout_width="155dp"
                android:layout_height="35dp"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>